Documentacion para usersController y test unitarios